# E2Ee-content-moderation

./: .gitignore  Cargo.toml  README.md  content_moderation_demo.md  content_moderation_phasewiseplan.md  demo_guide.md  details_regarding_content moderation.md  e2e-messenger-plan.md  experiments_results.md  phase0_feasibility.md  phase2_protocol_design.md  phase7_paper_draft.md  walkthrough_final.md
client/: Cargo.toml
client/src/: main.rs
crypto-core/: Cargo.toml
crypto-core/examples/: generate_payloads.rs
crypto-core/src/: lib.rs
moderation/: adversarial.py  features.py  plot_benchmarks.py  plot_linear_sweep.py  plot_mlp_sweep.py  robustness_tests.py  train.py
moderation-core/: Cargo.toml
moderation-core/src/: features.rs  lib.rs  linear.rs  mlp.rs  model.rs
moderation-core/tests/: parity.rs  parity_linear.rs  parity_mlp.rs
moderation/linear/: adversarial.py  train.py
moderation/linear/models/: adversarial_results.json  benchmark_results.json  metrics.json  model_d1024.json  model_d256.json  model_d64.json  test_vectors.json
moderation/mlp/: adversarial.py  train.py
moderation/mlp/models/: adversarial_results.json  benchmark_results.json  metrics.json  model_d1024.json  model_d256.json  model_d64.json  test_vectors.json
moderation/models/: adversarial_results.json  benchmark_results.json  metrics.json  model_d1024.json  model_d256.json  model_d64.json  test_vectors.json
server/: Cargo.toml
server/src/: main.rs
